# chouettesante

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/authentication/: camera_kms.rs  firebase.rs  google.rs  mod.rs
src/charlie_cypher/: mod.rs
src/protocol/: connection.rs  constants.rs  iotc_record.rs  mod.rs  parser.rs
src/utils/: binary_reader.rs  binary_writer.rs  buffer_reader.rs  hexdump.rs  mod.rs
