[package]
name = "chouettesante"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
anyhow = "1.0.95"
thiserror = "2.0.11"
bitflags = "2.8.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = "0.10"

[lib]
name="chouettesante"
crate-type = ["cdylib"]